--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "18.3.0-next-afe664d9d-20220913",
-    "react-dom": "18.3.0-next-afe664d9d-20220913",
-    "react-scripts": "5.1.0-next.14"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
