--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "primeraap",
-  "version": "0.1.0",
+  "version": "0.1.17",
   "private": true,
   "dependencies": {
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "css-select": "^5.1.0",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.3.2",
+    "terser": "^5.31.3",
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "start": "react-scripts start",
