--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "nth-check": "^2.1.1",
     "postcss": "^8.4.49",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.2",
@@ -27,5 +27,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "http-proxy-middleware": "^3.0.3"
+  },
+  "homepage": "."
 }
