--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.2",
     "terser": "^5.39.0"
@@ -17,11 +17,31 @@
     "eject": "react-scripts eject"
   },
   "browserslist": [
-    ">0.2%"
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "http-proxy-middleware": "^3.0.3"
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-numeric-separator": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "css-select": "^5.1.0",
+    "eslint": "^8.57.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^5.6.0",
+    "http-proxy-middleware": "^3.0.3",
+    "nth-check": "^2.1.1",
+    "postcss-svgo": "^6.0.0",
+    "tough-cookie": "^5.1.2",
+    "webpack-dev-middleware": "^7.4.2"
   },
-  "homepage": "."
+  "homepage": ".",
+  "resolutions": {
+    "svgo": "^3.3.2",
+    "nth-check": "^2.1.1"
+  }
 }
