--- a/src/tareas.json
+++ b/src/tareas.json
@@ -1,29 +1,28 @@
 {
 	"tareas": [
 	  {
-		"tittle": "Task1",
+		"title": "Task1",
 		"responsable": "Laura",
 		"descripcion": "Lorem ipsum",
 		"prioridad": "baja"
 	  },
 	  {
-		"tittle": "Task2",
+		"title": "Task2",
 		"responsable": "Giovanni",
 		"descripcion": "Lorem ipsum 2",
 		"prioridad": "media"
 	  },
 	  {
-		"tittle": "Task3",
+		"title": "Task3",
 		"responsable": "Nelly",
 		"descripcion": "Lorem ipsum3",
 		"prioridad": "alta"
 	  },
 	  {
-		"tittle": "Task4",
+		"title": "Task4",
 		"responsable": "Sinai",
 		"descripcion": "Lorem ipsum4",
 		"prioridad": "alta"
 	  }
 	]
   }
-  
