--- a/package.json
+++ b/package.json
@@ -23,25 +23,34 @@
   ],
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
     "@babel/plugin-transform-numeric-separator": "^7.23.4",
     "@babel/plugin-transform-optional-chaining": "^7.23.4",
     "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "css-select": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.6.0",
     "http-proxy-middleware": "^3.0.3",
     "nth-check": "^2.1.1",
+    "postcss": "^8.5.4",
     "postcss-svgo": "^6.0.0",
     "tough-cookie": "^5.1.2",
     "webpack-dev-middleware": "^7.4.2"
   },
   "homepage": ".",
-  "resolutions": {
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.4",
+    "css-select": "^5.1.0",
     "svgo": "^3.3.2",
-    "nth-check": "^2.1.1"
+    "@svgr/plugin-svgo": {
+      "svgo": "^3.3.2"
+    },
+    "resolve-url-loader": {
+      "postcss": "^8.5.4"
+    }
   }
 }
