--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "primeraap",
+  "name": "react-task-manager",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^0.0.0",
-    "resolve-url-loader": "^5.0.0",
-    "svgo": "^3.3.2",
-    "terser": "^5.39.0"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
@@ -22,35 +20,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/eslint-parser": "^7.23.10",
-    "@babel/plugin-transform-class-properties": "^7.23.3",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
-    "@babel/plugin-transform-numeric-separator": "^7.23.4",
-    "@babel/plugin-transform-optional-chaining": "^7.23.4",
-    "@babel/plugin-transform-private-methods": "^7.23.3",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "css-select": "^5.1.0",
-    "eslint": "^8.57.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^5.6.0",
-    "http-proxy-middleware": "^3.0.3",
-    "nth-check": "^2.1.1",
-    "postcss": "^8.5.4",
-    "postcss-svgo": "^6.0.0",
-    "tough-cookie": "^5.1.2",
-    "webpack-dev-middleware": "^7.4.2"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0"
   },
-  "homepage": ".",
-  "overrides": {
-    "nth-check": "^2.1.1",
-    "postcss": "^8.5.4",
-    "css-select": "^5.1.0",
-    "svgo": "^3.3.2",
-    "@svgr/plugin-svgo": {
-      "svgo": "^3.3.2"
-    },
-    "resolve-url-loader": {
-      "postcss": "^8.5.4"
-    }
-  }
+  "homepage": "."
 }
